@@ -22,20 +22,20 @@ public class DepartmentServiceImpl implements DepartmentService {
 
     private final DepartmentRepository departmentRepository;
     private final EmployeeRepository employeeRepository;
+    private final com.hrm.backend.config.prototype.DepartmentPrototypeRegistry departmentPrototypeRegistry;
 
     @Override
     @Transactional(readOnly = true)
     public List<DepartmentResponse> getAllDepartments() {
-        // Sử dụng phương thức repository đã tối ưu hóa để lấy các phòng ban cấp cao nhất
-        return departmentRepository.findAllByParentIsNull().stream()
+        return departmentPrototypeRegistry.getRootDepartmentsCloned().stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     @Transactional(readOnly = true)
     public DepartmentResponse getDepartmentById(Integer id) {
-        Department department = departmentRepository.findWithChildrenById(id)
+        Department department = departmentPrototypeRegistry.getDepartmentByIdCloned(id)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy phòng ban với ID: " + id));
         return mapToResponse(department);
     }
@@ -43,33 +43,33 @@ public class DepartmentServiceImpl implements DepartmentService {
     @Override
     @Transactional
     public DepartmentResponse createDepartment(DepartmentRequest request) {
-        // ... (existing code for checking code and manager)
-        if (departmentRepository.existsByCode(request.getCode())) {
-            throw new IllegalArgumentException("Mã phòng ban '" + request.getCode() + "' đã tồn tại");
+        if (departmentRepository.existsByCode(request.code())) {
+            throw new IllegalArgumentException("Mã phòng ban '" + request.code() + "' đã tồn tại");
         }
 
         Department parent = null;
-        if (request.getParentId() != null) {
-            parent = departmentRepository.findById(request.getParentId())
-                    .orElseThrow(() -> new RuntimeException("Không tìm thấy phòng ban cha với ID: " + request.getParentId()));
+        if (request.parentId() != null) {
+            parent = departmentRepository.findById(request.parentId())
+                    .orElseThrow(() -> new RuntimeException("Không tìm thấy phòng ban cha với ID: " + request.parentId()));
         }
 
         Employee manager = null;
-        if (request.getManagerId() != null) {
-            manager = employeeRepository.findById(request.getManagerId())
-                    .orElseThrow(() -> new RuntimeException("Không tìm thấy nhân viên làm trưởng phòng với ID: " + request.getManagerId()));
+        if (request.managerId() != null) {
+            manager = employeeRepository.findById(request.managerId())
+                    .orElseThrow(() -> new RuntimeException("Không tìm thấy nhân viên làm trưởng phòng với ID: " + request.managerId()));
         }
 
         Department department = Department.builder()
-                .code(request.getCode())
-                .name(request.getName())
-                .description(request.getDescription())
+                .code(request.code())
+                .name(request.name())
+                .description(request.description())
                 .parent(parent)
                 .manager(manager)
                 .build();
 
         Department saved = departmentRepository.save(department);
         log.info("Đã tạo phòng ban: {} - {}", saved.getCode(), saved.getName());
+        departmentPrototypeRegistry.refreshCache(); // Làm mới registry mẫu sau khi thêm mới
         return mapToResponse(saved);
     }
 
@@ -79,40 +79,41 @@ public class DepartmentServiceImpl implements DepartmentService {
         Department department = departmentRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy phòng ban với ID: " + id));
 
-        if (!department.getCode().equals(request.getCode()) && departmentRepository.existsByCode(request.getCode())) {
-            throw new IllegalArgumentException("Mã phòng ban '" + request.getCode() + "' đã tồn tại");
+        if (!department.getCode().equals(request.code()) && departmentRepository.existsByCode(request.code())) {
+            throw new IllegalArgumentException("Mã phòng ban '" + request.code() + "' đã tồn tại");
         }
 
         // Kiểm tra vòng lặp cha-con (bao gồm cả vòng lặp sâu)
-        if (request.getParentId() != null) {
-            if (request.getParentId().equals(id)) {
+        if (request.parentId() != null) {
+            if (request.parentId().equals(id)) {
                 throw new IllegalArgumentException("Phòng ban cha không thể là chính nó");
             }
-            if (isChildOf(request.getParentId(), id)) {
+            if (isChildOf(request.parentId(), id)) {
                 throw new IllegalArgumentException("Phòng ban cha không thể là phòng ban con của chính nó (tránh vòng lặp)");
             }
         }
 
         Department parent = null;
-        if (request.getParentId() != null) {
-            parent = departmentRepository.findById(request.getParentId())
-                    .orElseThrow(() -> new RuntimeException("Không tìm thấy phòng ban cha với ID: " + request.getParentId()));
+        if (request.parentId() != null) {
+            parent = departmentRepository.findById(request.parentId())
+                    .orElseThrow(() -> new RuntimeException("Không tìm thấy phòng ban cha với ID: " + request.parentId()));
         }
 
         Employee manager = null;
-        if (request.getManagerId() != null) {
-            manager = employeeRepository.findById(request.getManagerId())
-                    .orElseThrow(() -> new RuntimeException("Không tìm thấy nhân viên làm trưởng phòng với ID: " + request.getManagerId()));
+        if (request.managerId() != null) {
+            manager = employeeRepository.findById(request.managerId())
+                    .orElseThrow(() -> new RuntimeException("Không tìm thấy nhân viên làm trưởng phòng với ID: " + request.managerId()));
         }
 
-        department.setCode(request.getCode());
-        department.setName(request.getName());
-        department.setDescription(request.getDescription());
+        department.setCode(request.code());
+        department.setName(request.name());
+        department.setDescription(request.description());
         department.setParent(parent);
         department.setManager(manager);
 
         Department updated = departmentRepository.save(department);
         log.info("Đã cập nhật phòng ban: {}", updated.getCode());
+        departmentPrototypeRegistry.refreshCache(); // Làm mới registry mẫu sau khi cập nhật
         return mapToResponse(updated);
     }
 
@@ -148,40 +149,45 @@ public class DepartmentServiceImpl implements DepartmentService {
 
         departmentRepository.delete(department);
         log.info("Đã xóa phòng ban ID: {}", id);
+        departmentPrototypeRegistry.refreshCache(); // Làm mới registry mẫu sau khi xóa
     }
 
     private DepartmentResponse mapToResponse(Department department) {
-        DepartmentResponse response = DepartmentResponse.builder()
+        DepartmentResponse.ManagerInfo managerInfo = null;
+        if (department.getManager() != null) {
+            managerInfo = DepartmentResponse.ManagerInfo.builder()
+                    .id(department.getManager().getId())
+                    .code(department.getManager().getCode())
+                    .name(department.getManager().getName())
+                    .build();
+        }
+
+        DepartmentResponse.DepartmentSummary parentSummary = null;
+        if (department.getParent() != null) {
+            parentSummary = DepartmentResponse.DepartmentSummary.builder()
+                    .id(department.getParent().getId())
+                    .code(department.getParent().getCode())
+                    .name(department.getParent().getName())
+                    .build();
+        }
+
+        List<DepartmentResponse> children = null;
+        if (department.getChildren() != null && !department.getChildren().isEmpty()) {
+            children = department.getChildren().stream()
+                    .map(this::mapToResponse)
+                    .toList();
+        }
+
+        return DepartmentResponse.builder()
                 .id(department.getId())
                 .code(department.getCode())
                 .name(department.getName())
                 .description(department.getDescription())
+                .manager(managerInfo)
+                .parent(parentSummary)
+                .children(children)
                 .createdAt(department.getCreatedAt())
                 .updatedAt(department.getUpdatedAt())
                 .build();
-
-        if (department.getManager() != null) {
-            response.setManager(DepartmentResponse.ManagerInfo.builder()
-                    .id(department.getManager().getId())
-                    .code(department.getManager().getCode())
-                    .name(department.getManager().getName())
-                    .build());
-        }
-
-        if (department.getParent() != null) {
-            response.setParent(DepartmentResponse.DepartmentSummary.builder()
-                    .id(department.getParent().getId())
-                    .code(department.getParent().getCode())
-                    .name(department.getParent().getName())
-                    .build());
-        }
-
-        if (department.getChildren() != null && !department.getChildren().isEmpty()) {
-            response.setChildren(department.getChildren().stream()
-                    .map(this::mapToResponse)
-                    .collect(Collectors.toList()));
-        }
-
-        return response;
     }
 }
